MDEV-7335: Potential parallel slave deadlock with specific binlog corruption

If somehow the COMMIT or XID event in an event group was missing, the code in
parallel replication to handle this was not sufficient, leading to server
deadlock.