sql/slave.cc
@@ -5648,6 +5648,18 @@ static int queue_event(Master_info* mi,const char* buf, ulong event_len)
   }
   break;
 
+#ifndef DBUG_OFF
+  case XID_EVENT:
+    DBUG_EXECUTE_IF("slave_discard_xid_for_gtid_0_x_1000",
+    {
+      /* Inject an event group that is missing its XID commit event. */
+      if (mi->last_queued_gtid.domain_id == 0 &&
+          mi->last_queued_gtid.seq_no == 1000)
+        goto skip_relay_logging;
+    });
+    /* Fall through to default case ... */
+#endif
+
   default:
   default_action:
     if (mi->using_gtid != Master_info::USE_GTID_NO && mi->gtid_event_seen)
